# .xmonad

./: .gitignore  Main.hs  README.md  Utils.hs  build  dunstrc  ghci-xmonad.sh  initxmonad.sh  music.hs  music.js  picom-xmonad.conf  recompile.sh  rofisu.sh  setupMonitors.sh  stack.yaml  volume.sh  wifi.sh  xmobar.hs  xmonad-jameswillett.cabal  xmonad.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
