cabal-version:      2.4
name:               xmonad-jameswillett
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             James Willett
maintainer:         jms.wlltt@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:  Main

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0, xmonad, xmonad-contrib, X11, containers, process
    hs-source-dirs:   .
    default-language: Haskell2010

test-suite xmonad-jameswillett-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.15.1.0
